# TnTServer

./: .cmake-format.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: CompilerOptions.cmake  Doxygen.cmake  FetchDependencies.cmake  LinkerOptions.cmake  Optimization.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  SystemLink.cmake  TestingUtils.cmake  Utilities.cmake
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
src/: CMakeLists.txt
src/Common/: TnTBuildConfiguration.h  TnTProjectDefines.h
src/MyProject/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt
test/RuntimeTesting/: CMakeLists.txt  main.cpp
test/Test/: CMakeLists.txt  main.cpp
test/Test/Common/: TnTTestDefines.h  TnTTestsNamespaces.h
test/Test/MyProjectTests/: MyProjectTests.cpp
